--- a/resources/views/_nav.antlers.html
+++ b/resources/views/_nav.antlers.html
@@ -7,7 +7,7 @@
                 <a class="text-2xl ml-4 font-bold text-gray-800 transition-colors duration-200 transform dark:text-white lg:text-3xl hover:text-gray-700 dark:hover:text-gray-300" href="/">Sportcation</a>
             </div>
 
-            <!-- Mobile menu button -->
+
             <div class="flex md:hidden">
                 <button type="button" class="text-gray-500 dark:text-gray-200 hover:text-gray-600 dark:hover:text-gray-400 focus:outline-none focus:text-gray-600 dark:focus:text-gray-400" aria-label="toggle menu" @click="isOpen = !isOpen">
                   <svg viewBox="0 0 24 24" class="w-6 h-6 fill-current">
@@ -21,21 +21,24 @@
         <div :class="isOpen ? 'show' : 'hidden'" class="items-center md:flex md:block mt-4">
             <div class="flex flex-col md:flex-row md:mx-6">
                 {{ collection:nav }}
-                <a class="my-1 text-md font-bold text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400 md:mx-4 md:my-0" href="#">{{ title }}</a> {{ /collection:nav }}
+                <a class="my-1 text-md font-bold text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400 md:mx-4 md:my-0" href="{{ url }}">{{ title }}</a> {{ /collection:nav }}
             </div>
 
             <div class="flex justify-center md:block items-center">
-                <!-- <a class="relative text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-gray-600 dark:hover:text-gray-300" href="#">
-                    <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M3 3H5L5.4 5M7 13H17L21 5H5.4M7 13L5.4 5M7 13L4.70711 15.2929C4.07714 15.9229 4.52331 17 5.41421 17H17M17 17C15.8954 17 15 17.8954 15 19C15 20.1046 15.8954 21 17 21C18.1046 21 19 20.1046 19 19C19 17.8954 18.1046 17 17 17ZM9 19C9 20.1046 8.10457 21 7 21C5.89543 21 5 20.1046 5 19C5 17.8954 5.89543 17 7 17C8.10457 17 9 17.8954 9 19Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                  </svg> -->
-                <button class="w-24 h-8 bg-red-500 rounded-lg text-white hover:-translate-y-0.5 transform hover:bg-red-600  font-bold active:bg-red-900">Nyhetsbrev</button>
 
-                <!-- <span class="absolute top-0 left-0 p-1 text-xs text-white bg-blue-500 rounded-full"></span> -->
+                <button class="w-28 h-8 shadow-lg bg-indigo-500 rounded-lg text-white hover:-translate-y-0.5 transform hover:bg-indigo-400  font-bold tracking-wider focus:outline-none focus:ring focus:ring-offset-2 focus:ring-indigo-500 focus:ring-opacity-50 active:bg-indigo-600">Nyhetsbrev</button>
+
+
                 </a>
             </div>
         </div>
     </div>
+    <div class="flex justify-center mt-6">
+        <div class="bg-white mb-6 border w-1/3 rounded-md focus-within:ring dark:bg-gray-800 dark:border-gray-600 focus-within:border-blue-400 focus-within:ring-blue-300 focus-within:ring-opacity-40 dark:focus-within:border-blue-300">
+            <div class="flex flex-wrap justify-between md:flex-row">
+                <input type="text" class="p-2 m-1 text-sm text-gray-700 bg-transparent appearance-none focus:outline-none focus:placeholder-transparent" placeholder="Resor" aria-label="Resor">
+                <button class="w-full px-3 py-2 m-1 text-sm font-medium tracking-wider text-white uppercase transition-colors duration-200 transform bg-gray-800 rounded-md dark:hover:bg-gray-600 dark:bg-gray-700 lg:w-auto hover:bg-gray-700">Sök</button>
+            </div>
+        </div>
+    </div>
 </nav>
-
-<!-- add `@click.away="isOpen=false"` along with ``:class="isOpen ? 'show' : 'hidden'" on the parent div of menu. Now you can set `@click="isOpen = true"` on the button. -->
