--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -19,7 +19,7 @@
 </head>
 
 <body class="bg-gray-100 font-sans leading-normal text-gray-800 font-family-karla">
-    <div class="">
+    <div>
         {{ partial:nav }} {{ template_content }}
     </div>
     <script src="{{ mix src='/js/site.js' }}"></script>
