--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -20,7 +20,7 @@
 
 <body class="bg-gray-100 font-sans leading-normal text-gray-800 font-family-karla">
     <div>
-        {{ partial:nav }} {{ template_content }}
+        {{ partial:nav }} {{ template_content }} {{ partial:footer }}
     </div>
     <script src="{{ mix src='/js/site.js' }}"></script>
 </body>
