--- a/resources/views/travel_soccer/index.antlers.html
+++ b/resources/views/travel_soccer/index.antlers.html
@@ -1,1 +1,6 @@
-fdsgsdfgsdhvshshvsvths
+{{ collection:travel_soccer }}
+
+<div>
+    <h2><a href="{{ url }}">{{ title }}</a></h2>
+</div>
+{{ /collection:travel_soccer }}
