--- a/resources/views/_nav.antlers.html
+++ b/resources/views/_nav.antlers.html
@@ -20,13 +20,13 @@
 
         <div :class="isOpen ? 'show' : 'hidden'" class="items-center md:flex md:block mt-4">
             <div class="flex flex-col md:flex-row md:mx-6">
-                {{ collection:nav }}
-                <a class="my-1 text-md font-bold text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400 md:mx-4 md:my-0" href="{{ url }}">{{ title }}</a> {{ /collection:nav }}
+                {{ nav handle="main_nav" }}
+                <a class="my-1 text-lg font-bold text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400 md:mx-4 md:my-0" href="{{ url }}">{{ title }}</a> {{ /nav }}
             </div>
 
             <div class="flex justify-center md:block items-center">
 
-                <button class="w-28 h-8 shadow-lg bg-indigo-500 rounded-lg text-white hover:-translate-y-0.5 transform hover:bg-indigo-400  font-bold tracking-wider focus:outline-none focus:ring focus:ring-offset-2 focus:ring-indigo-500 focus:ring-opacity-50 active:bg-indigo-600">Nyhetsbrev</button>
+                <button class="w-28 h-8 shadow-lg bg-indigo-500 rounded-lg text-white hover:-translate-y-0.5 transform hover:bg-indigo-400  font-bold tracking-wider focus:outline-none focus:ring focus:ring-offset-2 focus:ring-indigo-500 focus:ring-opacity-50 active:bg-indigo-600">Kassa</button>
 
 
                 </a>
@@ -35,10 +35,14 @@
     </div>
     <div class="flex justify-center mt-6">
         <div class="bg-white mb-6 border w-1/3 rounded-md focus-within:ring dark:bg-gray-800 dark:border-gray-600 focus-within:border-blue-400 focus-within:ring-blue-300 focus-within:ring-opacity-40 dark:focus-within:border-blue-300">
-            <div class="flex flex-wrap justify-between md:flex-row">
-                <input type="text" class="p-2 m-1 text-sm text-gray-700 bg-transparent appearance-none focus:outline-none focus:placeholder-transparent" placeholder="Resor" aria-label="Resor">
-                <button class="w-full px-3 py-2 m-1 text-sm font-medium tracking-wider text-white uppercase transition-colors duration-200 transform bg-gray-800 rounded-md dark:hover:bg-gray-600 dark:bg-gray-700 lg:w-auto hover:bg-gray-700">Sök</button>
-            </div>
+            <form action="/search">
+                <div class="flex flex-wrap justify-between md:flex-row">
+
+                    <input type="search" name="q" class="p-2 m-1 text-md text-gray-700 bg-transparent appearance-none focus:outline-none focus:placeholder-transparent" placeholder="Sök" aria-label="Resor">
+                    <button class="w-full px-3 py-2 m-1 text-sm font-medium tracking-wider text-white uppercase transition-colors duration-200 transform bg-gray-800 rounded-md dark:hover:bg-gray-600 dark:bg-gray-700 lg:w-auto hover:bg-gray-700">Sök</button>
+
+                </div>
+            </form>
         </div>
     </div>
 </nav>
