--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -1,41 +1,43 @@
 <div class="max-w-7xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2">
-    {{ collection:hero }}
-    <img src="{{ assets_field }}" alt="Bild på två fotbolls spelare" class="w-full h-96 object-cover rounded-lg"> {{ /collection:hero }}
-    <div class="p-6">
-        <div>
-            <span class="text-blue-600 text-md font-medium flex">Kategori: Fotboll</span>
-            <a href="" class="inline-block text-gray-800 font-semibold text-2xl hover:text-gray-600 hover:underline">Fotbollsresor</a>
-            <p class=""></p>
-        </div>
-        <div class="">
-            <div class="">
-                <div class="flex justify-center">
 
-                    <button class="w-36 h-16 shadow-lg bg-indigo-500 rounded-lg text-white hover:-translate-y-0.5 transform hover:bg-indigo-400  font-bold tracking-wider focus:outline-none focus:ring focus:ring-offset-2 focus:ring-indigo-500 focus:ring-opacity-50 active:bg-indigo-600 uppercase">Boka resa här</button>
+
+    <header>
+        <div class="w-full bg-center bg-cover h-96" style="background-image: url(https://images.unsplash.com/photo-1508098682722-e99c43a406b2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);">
+            <div class="flex items-center justify-center w-full h-full bg-gray-900 bg-opacity-50">
+                <div class="text-center">
+                    <h1 class="text-2xl font-semibold text-white uppercase lg:text-3xl">Boka din <span class="text-blue-400 underline">Dröm</span></h1>
+
+                    <button class="w-full px-4 py-2 mt-4 text-sm font-medium text-white uppercase transition-colors duration-200 transform bg-blue-600 rounded-md lg:w-auto hover:bg-blue-500 focus:outline-none focus:bg-blue-500">Boka EN Upplevelse</button>
                 </div>
-
             </div>
         </div>
+    </header>
+    <div class="flex flex-col md:flex-row md:mx-6 p-8">
+        {{ nav handle="main_nav" }}
+        <a class="my-1 text-xl font-bold text-gray-700 transition-colors duration-200 transform dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400 md:mx-4 md:my-0" href="{{ url }}">{{ title }}</a> {{ /nav }}
     </div>
 </div>
 
-<section class="bg-white dark:bg-gray-900 max-w-7xl mx-auto shadow-lg rounded-lg mt-12 p-2">
+
+
+<section class="bg-white max-w-7xl mx-auto shadow-lg rounded-lg mt-12 p-2">
+    <h2 class="text-2xl ml-4 font-bold text-gray-800 transition-colors duration-200 transform dark:text-white lg:text-3xl hover:text-gray-700 dark:hover:text-gray-300">Rekommenderade resemål</h2>
     <div x-data="{
       openTab: 1,
       activeClasses: 'border-l border-t border-r rounded-t text-blue-700',
       inactiveClasses: 'text-blue-500 hover:text-blue-800'
     }" class="p-6">
         <ul class="flex border-b">
-            <li @click="openTab = 1" :class="{ '-mb-px': openTab === 1 }" class="-mb-px mr-1">
+            <li @click="openTab = 1" :class="{ '-mb-px': openTab === 1 }" class="-mb-px mr-1 cursor-pointer">
                 <a :class="openTab === 1 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 px-4 font-semibold">
                     Formulet F1
                 </a>
             </li>
-            <li @click="openTab = 2" :class="{ '-mb-px': openTab === 2 }" class="mr-1">
+            <li @click="openTab = 2" :class="{ '-mb-px': openTab === 2 }" class="mr-1 cursor-pointer">
                 <a :class="openTab === 2 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 px-4 font-semibold"> Fotbollsresor
                 </a>
             </li>
-            <li @click="openTab = 3" :class="{ '-mb-px': openTab === 3 }" class="mr-1">
+            <li @click="openTab = 3" :class="{ '-mb-px': openTab === 3 }" class="mr-1 cursor-pointer">
                 <a :class="openTab === 3 ? activeClasses : inactiveClasses" class="bg-white inline-block py-2 px-4 font-semibold"> Sportresor</a>
             </li>
         </ul>
@@ -46,7 +48,7 @@
 
                         {{ collection:travel_matches }}
                         <div class="">
-                            <img class="object-cover object-center w-full h-44 mx-auto rounded-lg m-4 border-2" src="{{ assets_field }}" alt="Silverstone England" />
+                            <img class="object-fit object-center w-full h-44 mx-auto rounded-lg m-4 border-2" src="{{ assets_field }}" alt="Silverstone England" />
                             <div class="mt-2">
                                 <div class="flex flex-col">
                                     <h3 class="text-md font-bold text-gray-700 dark:text-gray-200">{{ title }}</h3>
@@ -66,7 +68,7 @@
 
                         {{ collection:travel_soccer limit="6" }}
                         <div class="">
-                            <img class="object-cover object-center w-full h-44 mx-auto rounded-lg m-4 border-2" src="{{ assets_field }}" alt="Silverstone England" />
+                            <img class="object-fit object-center w-full h-44 mx-auto rounded-lg m-4 border-2" src="{{ assets_field }}" alt="Silverstone England" />
                             <div class="mt-2">
                                 <div class="flex flex-col">
                                     <h3 class="text-md font-bold text-gray-700 dark:text-gray-200">{{ title }}</h3>
@@ -85,7 +87,7 @@
 
                         {{ collection:wcm_travel limit="6" }}
                         <div class="">
-                            <img class="object-cover object-center w-full h-44 mx-auto rounded-lg m-4 border-2" src="{{ assets_field }}" alt="Silverstone England" />
+                            <img class="object-fit object-center w-full h-44 mx-auto rounded-lg m-4 border-2" src="{{ assets_field }}" alt="Silverstone England" />
                             <div class="mt-2">
                                 <div class="flex flex-col">
                                     <h3 class="text-md font-bold text-gray-700 dark:text-gray-200">{{ title }}</h3>
@@ -103,25 +105,11 @@
         </div>
     </div>
 </section>
-{{#
-<section class="bg-white dark:bg-gray-900 max-w-7xl mx-auto shadow-lg rounded-lg mt-12 p-2 flex flex-wrap">
-    {{ collection:travel_matches }}
-    <div class=" w-90  bg-white rounded-lg shadow-lg dark:bg-gray-800 m-4">
-        <div class="px-4 py-2">
 
-            <h1 class="text-3xl font-bold text-gray-800 uppercase dark:text-white">{{ title }}</h1>
-            <p class="mt-1 text-sm text-gray-600 dark:text-gray-400">{{ content }}</p>
-        </div>
 
-        <img class="object-cover m-1 h-48 mt-2 w-1/3" src="{{ assets_field }}" alt="Formulet resor">
-        <div class="flex items-center justify-between m-1 px-4 py-2 w-1/3 bg-gray-900">
-            <h1 class="text-lg font-bold text-white">$2500</h1>
-            <button class="px-2 py-1 text-xs font-semibold text-gray-900 uppercase transition-colors duration-200 transform bg-white rounded hover:bg-gray-200 focus:bg-gray-400 focus:outline-none">Beställ resa</button>
-        </div>
-    </div>
-    {{ /collection:travel_matches }}
-</section> #}}
-<section class="bg-white dark:bg-gray-900 max-w-7xl mx-auto shadow-lg rounded-lg mt-12 p-2">
+
+
+<section class="bg-white max-w-7xl mx-auto shadow-lg rounded-lg mt-12 p-2">
     <div class="container px-6 py-10 mx-auto">
         <h1 class="text-3xl font-semibold text-gray-800 capitalize lg:text-4xl dark:text-white">Upplev våra <br> underbara <span class="text-blue-500">Resor</span></h1>
 
@@ -137,16 +125,103 @@
                     <div class="mt-4 md:mx-4 md:mt-0">
                         <h1 class="text-2xl font-medium text-gray-700 capitalize dark:text-white">Mallorca – Medelhavets juvel</h1>
 
-                        <p class="mt-3 text-gray-500 text-xl dark:text-gray-300">KULTURRESA PÅ MALLORCA 2022 DÄR VI UPPLEVER ÖN UR EN NY VINKEL Att resa till Mallorca är för många en klassiker, men vi vet att Mallorca har mycket mer att erbjuda än bara sol och bad, vilket vi visar på denna kulturresa fylld
-                            av upplevelser som sent ska glömmas. Därför ska du resa med oss på en rundresa på Mallorca: Boende på strandnära och fyrstjärnigt hotell Guidad tur i Palma och den mäktiga Bellverfästningen Spännande tågutflykt till vackra
-                            Sollér och Port de Sollér Besök i historiska Valldemossa och Cartuja klostret
+                        <p class="mt-3 text-gray-500 text-xl dark:text-gray-300"> <span class="text-xl text-blue-500"> KULTURRESA PÅ MALLORCA 2022 DÄR VI UPPLEVER ÖN UR EN NY VINKEL</span> Att resa till Mallorca är för många en klassiker, men vi vet att Mallorca har mycket mer att erbjuda än bara sol och bad,
+                            vilket vi visar på denna kulturresa fylld av upplevelser som sent ska glömmas. Därför ska du resa med oss på en rundresa på Mallorca: Boende på strandnära och fyrstjärnigt hotell Guidad tur i Palma och den mäktiga Bellverfästningen
+                            Spännande tågutflykt till vackra Sollér och Port de Sollér Besök i historiska Valldemossa och Cartuja klostret
 
                         </p>
                     </div>
                 </div>
             </div>
-
-
         </div>
     </div>
+</section>
+
+
+<section class="bg-white max-w-7xl mx-auto shadow-lg rounded-lg mt-12 p-2">
+    <div class="container px-6 py-10 mx-auto">
+        <h1 class="text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl dark:text-white">Företagets Grundare</h1>
+
+
+
+        <div class="grid grid-cols-1 gap-8 mt-8 xl:mt-16 md:grid-cols-2 xl:grid-cols-4">
+            <div class="flex flex-col items-center p-8 transition-colors duration-200 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-blue-600 dark:border-gray-700 dark:hover:border-transparent">
+                <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt="">
+
+                <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">Founder and CEO</h1>
+
+                <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">Kalle Kanon</p>
+
+
+            </div>
+
+            <div class="flex flex-col items-center p-8 transition-colors duration-200 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-blue-600 dark:border-gray-700 dark:hover:border-transparent">
+                <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="https://images.unsplash.com/photo-1531590878845-12627191e687?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80" alt="">
+
+                <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">CTO</h1>
+
+                <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">Marie Mariesson</p>
+
+                <div class="flex mt-3 -mx-2">
+
+
+
+
+
+                </div>
+            </div>
+
+            <div class="flex flex-col items-center p-8 transition-colors duration-200 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-blue-600 dark:border-gray-700 dark:hover:border-transparent">
+                <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="https://images.unsplash.com/photo-1488508872907-592763824245?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="">
+
+                <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">Commercial Director</h1>
+
+                <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">Anna Andersson</p>
+
+                <div class="flex mt-3 -mx-2">
+
+
+
+
+                </div>
+            </div>
+
+            <div class="flex flex-col items-center p-8 transition-colors duration-200 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-blue-600 dark:border-gray-700 dark:hover:border-transparent">
+                <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="https://images.unsplash.com/photo-1570295999919-56ceb5ecca61?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt="">
+
+                <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">Head of Client Solutions</h1>
+
+                <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">Patrik Patriksson</p>
+
+                <div class="flex mt-3 -mx-2">
+
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+<section class="flex flex-col max-w-7xl mx-auto overflow-hidden bg-white rounded-lg shadow-lg md:flex-row md:h-48 mt-12">
+    <div class="md:flex md:items-center md:justify-center md:w-1/2 md:bg-gray-700 md">
+        <div class="px-6 py-6 md:px-8 md:py-0">
+            <h2 class="text-lg font-bold text-gray-700 dark:text-white md:text-gray-100">Registrera dig för <span class="text-blue-600 dark:text-blue-400 md:text-blue-300">erbjudande och nyheter</span></h2>
+
+            <p class="mt-2 text-sm text-gray-600 dark:text-gray-400 md:text-gray-400">Få dom senaste nyheterna och erbjudanden.</p>
+        </div>
+    </div>
+
+    <div class="flex items-center justify-center pb-6 md:py-0 md:w-1/2">
+        <form>
+            <div class="flex flex-col p-1 overflow-hidden border rounded-lg dark:border-gray-600 lg:flex-row dark:focus-within:border-blue-300 focus-within:ring focus-within:ring-opacity-40 focus-within:border-blue-400 focus-within:ring-blue-300">
+                <input class="px-6 py-2 text-gray-700 placeholder-gray-500 bg-white outline-none dark:placeholder-gray-400 focus:placeholder-transparent dark:focus:placeholder-transparent" type="text" name="email" placeholder="E-post" aria-label="Enter your email">
+
+                <button class="px-4 py-3 text-sm font-medium tracking-wider text-gray-100 uppercase transition-colors duration-200 transform bg-gray-700 rounded-lg hover:bg-gray-600 focus:bg-gray-600 focus:outline-none">Prenumerera</button>
+            </div>
+        </form>
+    </div>
+
 </section>
