--- a/resources/views/travel_matches/index.antlers.html
+++ b/resources/views/travel_matches/index.antlers.html
@@ -1,3 +1,4 @@
+{{#
 <section class="bg-white dark:bg-gray-900 max-w-7xl mx-auto shadow-lg rounded-lg mt-12 p-2 flex flex-wrap">
     {{ collection:travel_matches }}
     <div class=" w-90  bg-white rounded-lg shadow-lg dark:bg-gray-800 m-4">
@@ -14,4 +15,9 @@
         </div>
     </div>
     {{ /collection:travel_matches }}
-</section>
+</section> #}} {{ collection:travel_matches }}
+
+<div>
+    <h2><a href="{{ url }}">{{ title }}</a></h2>
+</div>
+{{ /collection:travel_matches }}
