--- a/resources/views/_footer.antlers.html
+++ b/resources/views/_footer.antlers.html
@@ -7,7 +7,7 @@
                         <a href="#" class="text-xl font-bold text-gray-200 dark:text-white hover:text-gray-100 dark:hover:text-gray-300">Sportcation</a>
                     </div>
 
-                    <p class="max-w-md mt-2 text-gray-200 ">Gör som 31,000+ andra och få en upplevelse för livet.</p>
+                    <p class="max-w-md mt-2 text-gray-200 ">Gör som 31,000+ andra <br> och få en upplevelse för livet.</p>
 
                     <div class="flex mt-4 -mx-2">
                         <a href="#" class="mx-2 text-gray-200 dark:text-gray-200 hover:text-blue-400 dark:hover:text-gray-400" aria-label="Linkden">
@@ -67,7 +67,8 @@
         <hr class="h-px my-6 bg-gray-300 border-none ">
 
         <div>
-            <p class="text-center text-gray-800 d">© Sportcation 2022 - All rights reserved</p>
+            <p class="text-center text-gray-200 d">© Sportcation 2022 - All rights reserved</p>
         </div>
+
     </div>
 </footer>
