--- a/resources/views/travel_soccer/index.antlers.html
+++ b/resources/views/travel_soccer/index.antlers.html
@@ -1,6 +1,207 @@
-{{ collection:travel_soccer }}
+{{# {{ collection:travel_soccer }}
 
 <div>
     <h2><a href="{{ url }}">{{ title }}</a></h2>
 </div>
-{{ /collection:travel_soccer }}
+{{ /collection:travel_soccer }} #}}
+
+
+<div class="max-w-7xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2">
+    <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1629217855633-79a6925d6c47?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+            </div>
+            <div class="swiper-slide">
+                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1556658905-cb1b9c7352e3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+            </div>
+            <div class="swiper-slide">
+                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1508098682722-e99c43a406b2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+            </div>
+
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+    </div>
+    <h2 class="text-3xl"></h2>
+</div>
+
+
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script>
+    var swiper = new Swiper(".mySwiper", {
+        cssMode: true,
+        navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+        },
+        pagination: {
+            el: ".swiper-pagination",
+        },
+        mousewheel: true,
+        keyboard: true,
+    });
+</script>
+
+
+<div class="max-w-7xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2">
+    <header class="bg-white dark:bg-gray-800">
+
+
+        <div class="container px-6 py-16 mx-auto">
+            <div class="items-center lg:flex">
+                <div class="w-full lg:w-1/2">
+                    <div class="lg:max-w-lg">
+                        <h1 class="text-2xl font-semibold text-gray-800 uppercase dark:text-white lg:text-3xl">Fotbollsresor</h1>
+                        <p class="mt-2 text-gray-600 text-xl">SPORTCATION Sportresor skräddarsyr fotbollsresor till Europas toppligor i fotboll. Vi har fotbollsresor till storstäder som London, Barcelona, Madrid, Milano, Manchester, Rom och Liverpool för att nämna några. Med oss reser tusentals
+                            nöjda kunder varje år på fotbollsresa. För grupper som vill på fotbollsresa ordnar vi även hjälp med att boka transfers, restauranger, diverse utflykter och mer. Vi har en unik erfarenhet av idrottsresebranschen och vårt kontaktnät
+                            gör att vi kan hjälpa alla sällskap, stora som små. En fotbollsresa är ett minne för livet och SPORTCATION Sportresor ger dig chansen att se fotboll som den ska ses: Live!</p>
+
+                    </div>
+                </div>
+
+                <div class="max-w-2xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2">
+                    <div class="swiper mySwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1629217855633-79a6925d6c47?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1556658905-cb1b9c7352e3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1508098682722-e99c43a406b2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1579952363873-27f3bade9f55?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80" alt="image" />
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1511886929837-354d827aae26?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80" alt="image" />
+                            </div>
+
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-pagination"></div>
+                    </div>
+                    <h2 class="text-3xl"></h2>
+                </div>
+
+
+                <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+                <script>
+                    var swiper = new Swiper(".mySwiper", {
+                        cssMode: true,
+                        navigation: {
+                            nextEl: ".swiper-button-next",
+                            prevEl: ".swiper-button-prev",
+                        },
+                        pagination: {
+                            el: ".swiper-pagination",
+                        },
+                        mousewheel: true,
+                        keyboard: true,
+                    });
+                </script>
+            </div>
+        </div>
+    </header>
+
+</div>
+
+<div class="max-w-7xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2 flex">
+
+    <div class="flex flex-wrap">
+        {{ collection:travel_soccer limit="6" }}
+        <div class="max-w-xs mx-auto overflow-hidden bg-white rounded-lg shadow-lg  my-7">
+            <div class="px-4 py-2 ">
+
+                <h1 class="text-3xl font-bold text-gray-800 uppercase dark:text-white">{{ title }}</h1>
+                <p class="mt-1 text-sm text-gray-600">I samtliga grundpaket ingår: Två nätter med del i dubbelrum på 3-stjärnigt hotell i centrala Leeds, frukost samt matchbiljett. Vi erbjuder även paket inklusive flyg.</p>
+            </div>
+
+            <img class="object-cover w-full h-48 mt-2" src="{{ assets_field }}" alt="NIKE AIR">
+
+            <div class="flex items-center justify-between px-4 py-2 bg-gray-900">
+                <h1 class="text-lg font-bold text-white">18000 kr</h1>
+                <button class="px-2 py-1 text-xs font-semibold text-gray-900 uppercase transition-colors duration-200 transform bg-white rounded hover:bg-gray-200 focus:bg-gray-400 focus:outline-none">Beställ</button>
+            </div>
+        </div>
+        {{ /collection:travel_soccer }}
+    </div>
+
+
+</div>
+<div class="max-w-7xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2">
+
+
+    <div class="max-w-xs shadow">
+        {{ collection:travel_soccer limit="3" }}
+        <div class="p-4 rounded ">
+
+            <img src="https://images.unsplash.com/photo-1511886929837-354d827aae26?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80" alt="" />
+            <h2 class="mt-4 text-lg">{{ title }}</h2>
+            <ul class="flex items-center">
+                <li>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-yellow-300 fill-current hover:text-yellow-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
+            />
+          </svg>
+                </li>
+                <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-yellow-300 fill-current hover:text-yellow-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
+            />
+          </svg>
+                </li>
+                <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-yellow-300 fill-current hover:text-yellow-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
+            />
+          </svg>
+                </li>
+                <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-yellow-300 fill-current hover:text-yellow-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
+            />
+          </svg>
+                </li>
+                <li>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-yellow-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
+            />
+          </svg>
+                </li>
+                <li class="ml-2 text-xs text-gray-600">20,150</li>
+            </ul>
+            <h4 class="text-xl font-bold text-red-600">18000 kr</h4>
+            <p class="text-sm text-gray-400">Bästa SPORTCATION någonsin</p>
+            <p class="text-sm text-gray-600">Nöjd kund</p>
+            {{ /collection:travel_soccer }}
+        </div>
+
+    </div>
+</div>
+</div>
