--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -21,7 +21,7 @@
 
 
 <section class="bg-white max-w-7xl mx-auto shadow-lg rounded-lg mt-12 p-2">
-    <h2 class="text-2xl ml-4 font-bold text-gray-800 transition-colors duration-200 transform dark:text-white lg:text-3xl hover:text-gray-700 dark:hover:text-gray-300">Rekommenderade resemål</h2>
+    <h2 class=""></h2>
     <div x-data="{
       openTab: 1,
       activeClasses: 'border-l border-t border-r rounded-t text-blue-700',
@@ -47,7 +47,7 @@
                     <div class="w-full text-center flex flex-wrap justify-between">
 
                         {{ collection:travel_matches }}
-                        <div class="">
+                        <div>
                             <img class="object-fit object-center w-full h-44 mx-auto rounded-lg m-4 border-2" src="{{ assets_field }}" alt="Silverstone England" />
                             <div class="mt-2">
                                 <div class="flex flex-col">
