--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -16,6 +16,7 @@
             font-family: karla;
         }
     </style>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
 
 <body class="bg-gray-100 font-sans leading-normal text-gray-800 font-family-karla">
