--- a/resources/views/travel_camp/index.antlers.html
+++ b/resources/views/travel_camp/index.antlers.html
@@ -1,3 +1,5 @@
+<div class="w-screen h-screen">
+    <iframe class="w-screen h-screen aspect-video" src="https://c.tenor.com/dR6vK_dQ1UgAAAAC/%C3%B3culos-escuro.gif" alt=""></div>
 {{ collection:travel_camp }}
 
 <div>
