--- a/resources/views/wcm_travel/index.antlers.html
+++ b/resources/views/wcm_travel/index.antlers.html
@@ -1,6 +1,8 @@
+<div class="w-screen h-screen">
+    <iframe class="w-screen h-screen aspect-video" src="https://c.tenor.com/Aid09G4xR7gAAAAC/terminator-dont-worry.gif" alt=""></div>
 {{ collection:wcm_travel }}
 
 <div>
     <h2><a href="{{ url }}">{{ title }}</a></h2>
 </div>
-{{ /collection:wcm_travel }}
+{{ /collection:wcm_travel }} fsfdsdfsf
