--- a/resources/views/wcm_travel/index.antlers.html
+++ b/resources/views/wcm_travel/index.antlers.html
@@ -1,8 +1,147 @@
-<div class="w-screen h-screen">
-    <iframe class="w-screen h-screen aspect-video" src="https://c.tenor.com/Aid09G4xR7gAAAAC/terminator-dont-worry.gif" alt=""></div>
-{{ collection:wcm_travel }}
+<div class="max-w-7xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2">
+    <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1629217855633-79a6925d6c47?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+            </div>
+            <div class="swiper-slide">
+                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1556658905-cb1b9c7352e3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+            </div>
+            <div class="swiper-slide">
+                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1508098682722-e99c43a406b2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+            </div>
 
-<div>
-    <h2><a href="{{ url }}">{{ title }}</a></h2>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+    </div>
+    <h2 class="text-3xl"></h2>
 </div>
-{{ /collection:wcm_travel }} fsfdsdfsf
+
+
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script>
+    var swiper = new Swiper(".mySwiper", {
+        cssMode: true,
+        navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+        },
+        pagination: {
+            el: ".swiper-pagination",
+        },
+        mousewheel: true,
+        keyboard: true,
+    });
+</script>
+
+
+<div class="max-w-7xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2">
+    <header class="bg-white dark:bg-gray-800">
+
+
+        <div class="container px-6 py-16 mx-auto">
+            <div class="items-center lg:flex">
+                <div class="w-full lg:w-1/2">
+                    <div class="lg:max-w-lg">
+                        <h1 class="text-2xl font-semibold text-gray-800 uppercase dark:text-white lg:text-3xl">Fotbollsresor</h1>
+                        <p class="mt-2 text-gray-600 text-xl">SPORTCATION Sportresor skräddarsyr fotbollsresor till Europas toppligor i fotboll. Vi har fotbollsresor till storstäder som London, Barcelona, Madrid, Milano, Manchester, Rom och Liverpool för att nämna några. Med oss reser tusentals
+                            nöjda kunder varje år på fotbollsresa. För grupper som vill på fotbollsresa ordnar vi även hjälp med att boka transfers, restauranger, diverse utflykter och mer. Vi har en unik erfarenhet av idrottsresebranschen och vårt kontaktnät
+                            gör att vi kan hjälpa alla sällskap, stora som små. En fotbollsresa är ett minne för livet och SPORTCATION Sportresor ger dig chansen att se fotboll som den ska ses: Live!</p>
+
+                    </div>
+                </div>
+
+                <div class="max-w-2xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2">
+                    <div class="swiper mySwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1629217855633-79a6925d6c47?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1556658905-cb1b9c7352e3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1508098682722-e99c43a406b2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1579952363873-27f3bade9f55?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80" alt="image" />
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1511886929837-354d827aae26?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80" alt="image" />
+                            </div>
+
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-pagination"></div>
+                    </div>
+                    <h2 class="text-3xl"></h2>
+                </div>
+
+
+                <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+                <script>
+                    var swiper = new Swiper(".mySwiper", {
+                        cssMode: true,
+                        navigation: {
+                            nextEl: ".swiper-button-next",
+                            prevEl: ".swiper-button-prev",
+                        },
+                        pagination: {
+                            el: ".swiper-pagination",
+                        },
+                        mousewheel: true,
+                        keyboard: true,
+                    });
+                </script>
+            </div>
+        </div>
+    </header>
+
+</div>
+
+
+<div class="max-w-7xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2 flex">
+
+
+    <div>
+        <h2 class="text-center text-2xl my-3">Detaljer om våra resor</h2>
+        <p class="text-center text-lg my-3">Fotbollsresor till >Champions League. Vi skräddarsyr er fotbollsresa enligt era önskemål och har efter 40 år i sportresebranschen ett fantastiskt nätverk runt om i Europa och kan därför erbjuda er förmånliga priser och kvalitativa fotbollsresor.</p>
+        {{ collection:wcm_travel }}
+        <a href="{{ url }}">
+            {{ /collection:wcm_travel }}
+            <div class="flex flex-wrap">
+
+                {{ collection:wcm_travel limit="6" }}
+
+                <div class="max-w-xs mx-auto overflow-hidden bg-gray-200 rounded-lg shadow-lg my-7 hover:bg-black">
+                    <div class="px-4 py-2 hover:text-white">
+
+                        <h1 class="text-3xl font-bold text-gray-500 uppercase ">{{ title }}</h1>
+
+                    </div>
+
+                    <img class="object-cover w-full h-48 mt-2" src="{{ assets_field }}" alt="">
+
+                    <div class="flex items-center justify-between px-4 py-2 bg-gray-900">
+                        <h1 class="text-lg font-bold text-white">18000 kr</h1>
+
+                    </div>
+                </div>
+
+                {{ /collection:wcm_travel }}
+            </div>
+        </a>
+        <hr>
+        <h2 class="mt-16 text-center text-3xl">Kundernas Omdömen</h2>
+
+
+    </div>
+
+
+
+
+
+</div>
