--- a/resources/views/travel_camp/index.antlers.html
+++ b/resources/views/travel_camp/index.antlers.html
@@ -1,8 +1,143 @@
-<div class="w-screen h-screen">
-    <iframe class="w-screen h-screen aspect-video" src="https://c.tenor.com/dR6vK_dQ1UgAAAAC/%C3%B3culos-escuro.gif" alt=""></div>
-{{ collection:travel_camp }}
+<div class="max-w-7xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2">
+    <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1531670854490-1e1c7d7bfcb6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80" alt="image" />
+            </div>
+            <div class="swiper-slide">
+                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1635774161119-59741f4934c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80" alt="image" />
+            </div>
+            <div class="swiper-slide">
+                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1575559077554-46c45efd29ff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+            </div>
 
-<div>
-    <h2><a href="{{ url }}">{{ title }}</a></h2>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+    </div>
+    <h2 class="text-3xl"></h2>
 </div>
-{{ /collection:travel_camp }}
+
+
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script>
+    var swiper = new Swiper(".mySwiper", {
+        cssMode: true,
+        navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+        },
+        pagination: {
+            el: ".swiper-pagination",
+        },
+        mousewheel: true,
+        keyboard: true,
+    });
+</script>
+
+
+<div class="max-w-7xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2">
+    <header class="bg-white dark:bg-gray-800">
+
+
+        <div class="container px-6 py-16 mx-auto">
+            <div class="items-center lg:flex">
+                <div class="w-full lg:w-1/2">
+                    <div class="lg:max-w-lg">
+                        <h1 class="text-2xl font-semibold text-gray-800 uppercase dark:text-white lg:text-3xl">Träningsresor</h1>
+                        <p class="mt-2 text-gray-600 text-xl mr-2">Sportcation Sportresor har mer än 40 års erfarenhet av sportresebranschen och erbjuder ett brett utbud av bland annat träningsläger, cuper, fotbollsresor, konferensresor, NHL-, tennis- och formel 1-resor. Hos oss står resenären och upplevelsen i centrum och vi strävar alltid efter att ge våra resenärer bästa möjliga service. Vi är experter på sportresor, och varje år reser nästan 20 000 nöjda resenärer med oss. Välkommen att boka din resa med Sportcation Sportresor!</p>
+
+                    </div>
+                </div>
+
+                <div class="max-w-2xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2">
+                    <div class="swiper mySwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1521322124276-fc5ab764051e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="image" />
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src=https://images.unsplash.com/photo-1431274172761-fca41d930114?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1600596267466-a9fc21632101?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="image" />
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1572005707350-931169351ab3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" alt="image" />
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="object-cover w-full h-96" src="https://images.unsplash.com/photo-1607427293702-036933bbf746?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80" alt="image" />
+                            </div>
+
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-pagination"></div>
+                    </div>
+                    <h2 class="text-3xl"></h2>
+                </div>
+
+
+                <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+                <script>
+                    var swiper = new Swiper(".mySwiper", {
+                        cssMode: true,
+                        navigation: {
+                            nextEl: ".swiper-button-next",
+                            prevEl: ".swiper-button-prev",
+                        },
+                        pagination: {
+                            el: ".swiper-pagination",
+                        },
+                        mousewheel: true,
+                        keyboard: true,
+                    });
+                </script>
+            </div>
+        </div>
+    </header>
+
+</div>
+
+
+<div class="max-w-7xl mx-auto bg-white overflow-hidden shadow-lg rounded-lg mt-12 p-2 flex">
+
+
+    <div>
+        <h2 class="text-center text-2xl my-3">Detaljer om våra resor</h2>
+        <p class="text-center text-lg my-3">Fotbollsresor till >Champions League. Vi skräddarsyr er fotbollsresa enligt era önskemål och har efter 40 år i sportresebranschen ett fantastiskt nätverk runt om i Europa och kan därför erbjuda er förmånliga priser och kvalitativa fotbollsresor.</p>
+        {{ collection:travel_camp }}
+        <a href="{{ url }}">
+            {{ /collection:travel_camp }}
+            <div class="flex flex-wrap">
+
+                {{ collection:travel_camp limit="6" }}
+
+                <div class="max-w-xs mx-auto overflow-hidden bg-gray-200 rounded-lg shadow-lg my-7 hover:bg-black">
+                    <div class="px-4 py-2 hover:text-white">
+                        <h1 class="text-3xl font-bold text-gray-500 uppercase ">{{ title }}</h1>
+                    </div>
+
+                    <img class="object-cover w-full h-48 mt-2" src="{{ assets_field }}" alt="">
+
+                    <div class="flex items-center justify-between px-4 py-2 bg-gray-900">
+                        <h2 class="text-lg font-bold text-white">{{ tagline }}</h2>
+
+                    </div>
+                </div>
+
+                {{ /collection:travel_camp }}
+            </div>
+        </a>
+        <hr>
+        <h2 class="mt-16 text-center text-3xl">Kundernas Omdömen</h2>
+
+
+    </div>
+
+
+
+
+
+</div>
