--- a/resources/views/travel_matches/show.antlers.html
+++ b/resources/views/travel_matches/show.antlers.html
@@ -1,12 +1,19 @@
+<img class=" my-3 sm:max-w-7xl bg-center bg-cover h-96 mx-auto" src="{{ assets_field }}">
+
 <section class="bg-white dark:bg-gray-900 max-w-7xl mx-auto shadow-lg rounded-lg mt-12 p-2">
     <div class="container px-6 py-8 mx-auto">
         <div class="items-center lg:flex">
             <div class="lg:w-1/2">
-                <h2 class="text-3xl font-bold text-gray-800 dark:text-gray-100">{{ title }}</h2>
+                <h1 class="text-3xl font-bold text-gray-800 dark:text-gray-100">{{ title }}</h1>
 
                 <p class="mt-4 text-gray-500 dark:text-gray-400 lg:max-w-md">
-                    {{ content }}
-                </p>
+                    {{ content }}</p>
+
+                <div class="text-center bg-blue-500 text-white text-lg rounded-md my-4">
+                    <a class=" " href="{{ olka_express_knapp-lank }}">Beställning och Priser</a>
+                </div>
+
+
 
                 <div class="flex items-center mt-6 -mx-2">
                     <a class="mx-2" href="#" aria-label="Twitter">
@@ -36,11 +43,7 @@
             </div>
 
             <div class="mt-8 lg:mt-0 lg:w-1/2">
-                <div class="flex items-center justify-center lg:justify-end">
-                    <div class="max-w-lg">
-                        <img class="object-cover object-center w-full h-64 rounded-md shadow" src="{{ assets_field }}" alt="">
-                    </div>
-                </div>
+
             </div>
         </div>
     </div>
